[project]
name = "neutts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "librosa>=0.11.0",
    "neucodec>=0.0.4",
    "numpy>=2.3.5",
    "resemble-perth>=1.0.1",
    "soundfile>=0.13.1",
    "torch>=2.9.1",
    "transformers>=4.57.6",
]

[dependency-groups]
dev = [
    "llama-cpp-python>=0.3.16",
    "onnxruntime>=1.23.2",
    "pre-commit>=4.5.1",
    "pyaudio>=0.2.14",
    "pytest>=9.0.2",
]

# CUDA Configuration

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]